# demo-zsweep

./: .gitignore  CLAUDE.md  CLEANSPX.OFF  CMakeLists.txt  EXPANDED.TF  GLjunk.c  GraphicsGems.h  Makefile  Makefile.osx  README.md  SPX.PPM  SPX.TF  cleanSPX.tf  main.c  x  y  zs_API.cpp  zs_API.hh  zs_APIlaptop.cpp  zs_Matrix.hh  zs_OpenGL.cpp  zs_ZSImage.cpp  zs_ZSweepDemo.cpp  zs_ZSweepDemo.hh  zs_basic.cpp  zs_basic.hh  zs_boundary.cpp  zs_cell.cpp  zs_cell.hh  zs_debug.hh  zs_debugFuncs.cpp  zs_fakeSMP.cpp  zs_fakeSMP.hh  zs_general.cpp  zs_general.hh  zs_hash.cpp  zs_hash.hh  zs_heap.cpp  zs_heap.hh  zs_interf.cpp  (+16 more)
English.lproj/: InfoPlist.strings
